  to key down handler.
- Fixed a problem with HTML list generation for wxRichTextCtrl.
- wxRichTextCtrl no longer deletes a character when content is selected
  before pressing Delete.
- Fixed inability to select no superscript and no subscript in wxRichTextCtrl's
  formatting dialog.
- Fixed centering and right-justification when combined with left indentation.
- Fixed wrapping problem for long lines.
- Fixed wxHTML's pagebreaks computation in tables (D.J.Stauffer).
- Fixed wxHtmlWindow::SelectionToText() to correctly insert newlines after
  single-cell paragraphs.
- Fixed wxHTML's line breaks handling in <pre> blocks broken in 2.8.8 (#10120).
- wxHTML: don't include extra whitespace in table cells.
- Implemented wxWindow::DragAcceptFiles() on all platforms.
- Added wxAUI_MGR_LIVE_RESIZE flag to wxAuiManager and made it the default on
  wxMac with CoreGraphics where sash drawing isn't implemented.

All (Unix):

- Return false from wxSingleInstanceChecker::IsAnotherRunning() if an error
  occurred while opening or reading the lock file (Lauri Nurmi).

wxMSW:

- Fixed bug with using non default encoding in wxTextCtrl in ANSI build.
- Restored generation of events for accelerators when there is no menu bar.
- Fixed wxArtProvider::GetSizeHint() to return 16x16 for wxART_FRAME_ICON.
- Fixed toolbar buttons so that they don't disappear temporarily when clicked
  if the event handler causes window update.
- Fix display enumeration under WinCE (Vince Harron).
- Fix best size calculation for wxNotebook with multiple rows (Alex McCarthy).
- Correct coordinates of wxDropFilesEvent (Dmitriy Maksimov).
- Fix handling of abandoned mutexes in wxMutex (David Heffernan).
- Avoid warnings about deprecated localtime with MSVC8/9 (Chris Stankevitz).

wxMSW/CE:

- Don't hardcode the menu bar height (Michele Spighi).

wxGTK:

- Fixed printing to use fonts sizes adjustment consistent with wxMSW.
- Make colours used by list, tree and status bar controls more consistent with